# plugindb

./: .coverage  .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Procfile  README.md  add_plugins.py  pyproject.toml  render.yaml
.claude/: settings.json
.claude/agents/: seed-validator.md
.claude/skills/add-plugin/: SKILL.md
.claude/skills/deploy-check/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  data-correction.yml  plugin-submission.yml
.github/workflows/: deploy.yml  test.yml  validate-seed.yml
data/: enrich_seed.py  image_archive.json  plugindb.sqlite-shm  plugindb.sqlite-wal  seed.json
docs/plans/: 2026-03-18-plugindb-core-api-plan.md
docs/specs/: 2026-03-18-plugindb-core-api-design.md
frontend/: app.js  index.html  style.css
plugindb/: __init__.py  __main__.py  database.py  enricher.py  main.py  models.py  queries.py  seed.py
plugindb/routes/: images.py  lookup.py  manufacturers.py  meta.py  plugins.py  search.py
scripts/: add_2026_releases.py  add_brands.py  add_ni_plugins.py  add_plugin.py  archive_images.py  archive_manuals.py  bulk_add_plugins.py  enrich.py  scrape_images.py  scrape_splice.py  validate_urls.py
tests/: conftest.py  test_enricher.py  test_frontend.py  test_lookup.py  test_manufacturers.py  test_meta.py  test_plugins.py  test_search.py  test_seed.py
