[project]
name = "plugindb"
version = "1.4.0"
description = "Open database of audio production plugins — the MusicBrainz for VSTs"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["plugindb*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
